Fixed compilation issue on jitpack